<resources>
    <string name="app_name">Ecommerce Project</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loginsignup">Sign In/Sign Up</string>
    <string name="user_info">User information</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Phone number</string>
    <string name="continue_login">Continue</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="phone_number_or_email">Phone number / Email</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_phone_number_or_email">Enter phone number / email</string>
    <string name="notification">Notification</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam at corporis dolorum ducimus est eveniet iusto, maxime repudiandae sed. Adipisci delectus, distinctio eligendi incidunt officia omnis quos temporibus unde vero!</string>
    <string name="cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="confirm_order">Confirm order</string>
    <string name="address">Address</string>
    <string name="payment_method">Payment method</string>
    <string name="products">Products</string>
    <string name="note">Note</string>
    <string name="temp_sum">Temporary Price</string>
    <string name="ship_price">Shipment Price</string>
    <string name="total_sum">Total Price</string>
    <string name="pay_now">Order</string>
    <string name="let_shopping">Let\'s shopping</string>
</resources>