<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity">
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/ic_arrow_left"
        android:backgroundTint="@android:color/transparent"
        />
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_earth"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/txt_loginsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/txt_phone_number_or_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_or_email"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/txt_loginsignup"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_phone_number_or_email"
        android:background="@drawable/text_input_background"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone_number_or_email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phone_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number_or_email"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/text_field_login"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        android:layout_marginLeft="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_field_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:background="@drawable/text_input_background"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/txt_password"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_600"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/white"
        android:text="@string/continue_login"
        app:layout_constraintTop_toBottomOf="@id/text_field_password"
        android:layout_marginTop="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>