<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".presentation.OrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@android:color/transparent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/confirm_order"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginVertical="10dp"
                />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/address"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:textColor="@color/dark_grey"
            android:textAllCaps="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="10dp">
                <TextView
                    android:id="@+id/txt_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="hoa"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/txt_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0987654321"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/txt_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="admin@gmail.com"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/txt_user_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/lorem"
                    />
            </LinearLayout>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/payment_method"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:textColor="@color/dark_grey"
            android:textAllCaps="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:background="@color/white">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_earth"
                />
            <TextView
                android:id="@+id/txt_type_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:text="Thanh toan khi nhan hang"
                android:layout_weight="1"
                android:textColor="@color/black"/>
            <ImageButton
                android:id="@+id/btn_change_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:backgroundTint="@android:color/transparent"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/products"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:textColor="@color/dark_grey"
            android:textAllCaps="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="5dp">
            <ImageView
                android:id="@+id/img_product"
                android:layout_gravity="center"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_earth"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txt_product_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lorem"
                        android:maxLines="2"
                        android:textColor="@color/black"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                    <TextView
                        android:id="@+id/txt_product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:text="400.000d"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="x1"
                        android:textColor="@color/dark_grey"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:background="@color/white">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_background"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"
                    android:textSize="14sp"
                    android:hint="@string/note"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_marginVertical="10dp"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temp_sum"
                    android:textColor="@color/dark_grey"/>
                <TextView
                    android:id="@+id/txt_temp_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="400.000d"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ship_price"
                    android:textColor="@color/dark_grey"/>
                <TextView
                    android:id="@+id/txt_ship_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20.000d"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_sum"
                    android:textColor="@color/dark_grey"/>
                <TextView
                    android:id="@+id/txt_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="420.000d"
                    android:textStyle="bold"
                    android:textColor="@color/light_blue_600"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="420.000d"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textColor="@color/light_blue_600"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_order"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:background="@color/light_blue_600"
                android:text="@string/pay_now"
                android:textColor="@color/white"
                android:textAllCaps="false"
                />
        </LinearLayout>

    </LinearLayout>
</ScrollView>