<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_profile"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="150dp"
        android:backgroundTint="@color/light_blue_600">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signIn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/loginsignup"
            android:textColor="@color/light_blue_600"
            android:layout_gravity="center"
            android:visibility="gone"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"
            android:backgroundTint="@android:color/transparent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_ava"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/img_ava"
                app:layout_constraintRight_toLeftOf="@+id/btn_edit_profile"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="0987654321"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    />
            </LinearLayout>
            <ImageButton
                android:id="@+id/btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@android:color/transparent"
                android:layout_gravity="right"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/card_view_profile"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp">
        <ImageView
            android:id="@+id/img_logout"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_logout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="6dp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/img_logout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="15dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>